Change number button layout from 3 to 4 columns

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       />
 
       <!-- Number Buttons -->
-      <div class="grid grid-cols-3 gap-3 mb-4">
+      <div class="grid grid-cols-4 gap-3 mb-4">
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="9">9</button>
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="8">8</button>
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="7">7</button>
@@ -30,6 +30,7 @@
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="3">3</button>
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="2">2</button>
         <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="1">1</button>
+        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="1">0</button>
       </div>
 
       <!-- Action Buttons -->
