--- a/index.html
+++ b/index.html
@@ -20,19 +20,25 @@
       />
 
       <!-- Number Buttons -->
-      <div class="grid grid-cols-4 gap-3 mb-4">
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="9">9</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="8">8</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="7">7</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="6">6</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="5">5</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="4">4</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="3">3</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="2">2</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="1">1</button>
-        <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="1">0</button>
-      </div>
+    <div class="grid grid-cols-3 gap-3 mb-4">
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="7">7</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="8">8</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="9">9</button>
+      
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="4">4</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="5">5</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="6">6</button>
 
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="1">1</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="2">2</button>
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="3">3</button>
+
+    <div class="py-2"></div> 
+
+    <button class="num-btn bg-blue-100 text-blue-800 font-semibold py-2 rounded hover:bg-blue-200 transition" data-value="0">0</button>
+    
+    <div class="py-2"></div> 
+</div>
       <!-- Action Buttons -->
       <div class="grid grid-cols-2 gap-3 mb-6">
         <button id="clearBtn" class="bg-red-100 text-red-700 font-semibold py-2 rounded hover:bg-red-200 transition">Clear</button>
