Add collaboration section to index.html
Added a collaboration section with contact information.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prime Number Calculator & Checker | Educational Tool</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-blue-900 text-white min-h-screen flex flex-col items-center justify-center p-4">
@@ -61,6 +62,21 @@
         <button id="generateBtn" class="w-full bg-green-600 text-white font-bold py-2 rounded hover:bg-green-700 transition">Generate Primes</button>
         <div id="primeList" class="mt-4 text-sm text-left whitespace-pre-wrap"></div>
       </div>
+
+      <!-- Collaboration Section -->
+   <div class="mt-12 text-center text-white">
+  <h3 class="text-xl font-bold mb-2">🤝 Collaborate with Joshua</h3>
+  <p class="mb-2">Want to build something like this for your school or child?</p>
+  <p class="mb-4">I'm open to collaborations, tutoring, or custom educational tools.</p>
+  <a
+    href="https://wa.me/2349122656254"
+    target="_blank"
+    class="inline-block bg-green-500 text-white font-semibold px-4 py-2 rounded hover:bg-green-600 transition"
+  >
+    📱 Chat with Me on WhatsApp
+  </a>
+</div>
+
     </div>
 
     <!-- JavaScript -->
