--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
         <div id="primeList" class="mt-4 text-sm text-left whitespace-pre-wrap"></div>
       </div>
 
+      <!-- Learn More Section -->
+<div class="mt-12 text-center text-white">
+  <h3 class="text-xl font-bold mb-2">📚 Learn More About Prime Numbers</h3>
+  <p class="mb-4">Want to dive deeper into the world of primes? Check out these trusted resources:</p>
+
+  <ul class="space-y-2 text-blue-200 text-sm">
+    <li>
+      🔍 <a href="https://en.wikipedia.org/wiki/Prime_number" target="_blank" class="underline hover:text-white">Prime Number – Wikipedia</a>
+    </li>
+    <li>
+      📖 <a href="https://openlibrary.org/subjects/prime_numbers" target="_blank" class="underline hover:text-white">Books on Prime Numbers – Open Library</a>
+    </li>
+    <li>
+      🧠 <a href="https://bookauthority.org/books/best-prime-numbers-books" target="_blank" class="underline hover:text-white">Top Prime Number Books – BookAuthority</a>
+    </li>
+    <li>
+      ⭐ <a href="https://www.goodreads.com/shelf/show/prime-numbers" target="_blank" class="underline hover:text-white">Prime Number Reads – Goodreads</a>
+    </li>
+  </ul>
+</div>
+
       <!-- Collaboration Section -->
    <div class="mt-12 text-center text-white">
   <h3 class="text-xl font-bold mb-2">🤝 Collaborate with Joshua</h3>
