Add educational and collaboration sections to index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <!-- Result Display -->
       <div id="result" class="mt-4 text-center text-lg font-medium transition duration-300"></div>
     </div>
+<hr class="my-6 border-t-2 border-blue-300" />
 
     <!-- Educational Section -->
     <div class="mt-8 max-w-xl text-center">
@@ -55,6 +56,7 @@
       <p class="mb-4">A <strong>prime number</strong> is a whole number greater than 1 that is only divisible by 1 and itself.</p>
       <h3 class="text-xl font-bold mb-2">🔐 Why Are Prime Numbers Important?</h3>
       <p class="mb-4">Prime numbers are essential in <strong>cryptography</strong> and <strong>computer security</strong>, especially in encryption algorithms like RSA.</p>
+<hr class="my-6 border-t-2 border-blue-300" />
 
       <!-- Generate Primes Section -->
       <div class="mt-6">
@@ -62,6 +64,7 @@
         <button id="generateBtn" class="w-full bg-green-600 text-white font-bold py-2 rounded hover:bg-green-700 transition">Generate Primes</button>
         <div id="primeList" class="mt-4 text-sm text-left whitespace-pre-wrap"></div>
       </div>
+<hr class="my-6 border-t-2 border-blue-300" />
 
       <!-- Learn More Section -->
 <div class="mt-12 text-center text-white">
@@ -83,6 +86,7 @@
     </li>
   </ul>
 </div>
+<hr class="my-6 border-t-2 border-blue-300" />
 
       <!-- Collaboration Section -->
    <div class="mt-12 text-center text-white">
@@ -97,6 +101,8 @@
     📱 Chat with Me on WhatsApp
   </a>
 </div>
+      <hr class="my-6 border-t-2 border-blue-300" />
+
       <!-- footer -->
 <footer class="mt-12 text-center text-gray-300 text-sm w-full max-w-xl">
       <p class="mb-2">&copy; <span id="currentYear"></span> Prime Number Checker | Built by Joshua</p>
