Change input text color to black for rangeInput

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <!-- Generate Primes Section -->
       <div class="mt-6">
-        <input id="rangeInput" type="number" placeholder="Generate primes up to..." class="w-full px-4 py-2 border border-blue-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4 transition duration-300" />
+        <input id="rangeInput" type="number" placeholder="Generate primes up to..." class="w-full px-4 py-2 border border-blue-300 rounded-md text-black focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4 transition duration-300" />
         <button id="generateBtn" class="w-full bg-green-600 text-white font-bold py-2 rounded hover:bg-green-700 transition">Generate Primes</button>
         <div id="primeList" class="mt-4 text-sm text-left whitespace-pre-wrap"></div>
       </div>
